[metadata]
name = acb-py
version = 1.2.4
author = The Holy Constituency of the Summer Triangle
author_email = summertriangle.dev@gmail.com
description = Library for reading/extracting ACB files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/summertriangle-dev/acb.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Archiving

[options]
packages = find:
python_requires = >=3.6

[options.package_data]
acb = py.typed

[options.entry_points]
console_scripts = acbextract=acb.__main__:main
